tests/ui/parser/non_utf8_import.stderr
error: couldn't read ROOT/tests/ui/parser/auxiliary/non_utf8.sol: stream did not contain valid UTF-8
  --> ROOT/tests/ui/parser/non_utf8_import.sol:LL:CC
   |
LL | import "./auxiliary/non_utf8.sol";
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

